tests/fixtures/invalid/int_bitand_float.py
# Cannot bitwise AND Int and Float
x: float = 1 & 1.0
